[gd_scene load_steps=5 format=3 uid="uid://dh7ll11x8aurc"]

[ext_resource type="Script" path="res://Scenes/Items/item.gd" id="1_o40x3"]
[ext_resource type="Texture2D" uid="uid://dw414iwajlqv7" path="res://Sprites/description.png" id="2_1mey5"]
[ext_resource type="FontFile" uid="uid://082o24hwqm21" path="res://Fonts/baskervillebold.ttf" id="3_y4sv5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k2fhc"]
radius = 124.052

[node name="Item" type="Sprite2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_o40x3")

[node name="Area_player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_player"]
shape = SubResource("CircleShape2D_k2fhc")

[node name="Area_item" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="Description" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-228.333, -105)
texture = ExtResource("2_1mey5")

[node name="decr_Label" type="Label" parent="Description"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.055
anchor_top = 0.102
anchor_right = 0.939
anchor_bottom = 0.868
offset_left = -168.535
offset_top = -85.442
offset_right = -168.443
offset_bottom = -85.428
theme_override_colors/font_color = Color(0.278431, 0.203922, 0.101961, 1)
theme_override_fonts/font = ExtResource("3_y4sv5")
theme_override_font_sizes/font_size = 32
autowrap_mode = 1

[connection signal="mouse_entered" from="Area_player" to="." method="_on_area_player_mouse_entered"]
[connection signal="mouse_exited" from="Area_player" to="." method="_on_area_player_mouse_exited"]
